--- a/src/components/Banner/ProjectBanner.module.css
+++ b/src/components/Banner/ProjectBanner.module.css
@@ -15,22 +15,20 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  margin-top: -200px;
   margin-bottom: 0%;
 }
-/* cards */
 
-.contenedorCards {
+.center {
+  margin: 0 auto;
   display: flex;
-  min-height: 100vh;
-  place-items: center;
-  line-height: 1.6;
-  background: var(--clr-neutral-100);
-  font-family: sans-serif;
-  padding-right: 15em;
+  justify-content: center;
+  align-items: center;
 }
 
-.card-me {
+/* cards */
+
+.cardMe {
   color: var(--clr-neutral-100);
   background-size: cover;
   background-color: gray;
@@ -41,37 +39,37 @@
   transition: transform 500ms ease;
 }
 
-.project-one {
+.projectOne {
   background-image: url(http://drive.google.com/uc?export=view&id=1c9OCU-usfg_QOxA_dl4ENUSYBTjrBeJm);
 }
 
-.project-two {
+.projectTwo {
   background-image: url("../../img/intra.png");
 }
 
-.project-three {
+.projectThree {
   background-image: url(http://drive.google.com/uc?export=view&id=1J-vzQZrxCw0-H2iMABkZEiTrPnetVaW4);
 }
 
-.project-four {
+.projectFour {
   background-image: url("../../img/selia.png");
 }
 
-.project-five {
+.projectFive {
   background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/d9b37981579495.5e998d5b923bc.jpg);
 }
 
-.project-six {
+.projectSix {
   background-image: url(https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/d9b37981579495.5e998d5b923bc.jpg);
 }
 
-.card-me:hover,
-.card-me:focus-within {
+.cardMe:hover,
+.cardMe:focus-within {
   transform: scale(1.04);
 }
 
-.card-content {
-  height: 350px;
+.cardContent {
+  height: 350px; 
   --padding: 1.5rem;
   padding: var(--padding);
   background: linear-gradient(
@@ -81,12 +79,12 @@
   );
 }
 
-.card-title {
+.cardTitle {
   position: relative;
   width: max-content;
 }
 
-.card-title::after {
+.cardTitle::after {
   content: "";
   position: absolute;
   height: 4px;
@@ -98,12 +96,12 @@
   transition: transform 500ms ease;
 }
 
-.card-me:hover .card-title::after,
-.card-me:focus-within .card-title::after {
+.cardMe:hover .cardTitle::after,
+.cardMe:focus-within .cardTitle::after {
   transform: scaleX(1);
 }
 
-.card-body {
+.cardBody {
   color: rgb(255, 255, 255 / 0.9);
 }
 
@@ -123,32 +121,32 @@
 }
 
 @media (hover) {
-  .card-content {
+  .cardContent {
     transform: translateY(65%);
     transition: transform 500ms ease;
   }
 
-  .card-me:hover .card-content,
-  .card-me:focus-within .card-content {
+  .cardMe:hover .cardContent,
+  .cardMe:focus-within .cardContent {
     transform: translateY(0);
     transition-delay: 500ms;
   }
 
-  .card-me:focus-within .card-content {
+  .cardMe:focus-within .cardContent {
     transition-duration: 0ms;
   }
 
-  .card-content > *:not(.card-title) {
+  .cardContent > *:not(.cardTitle) {
     opacity: 0;
     transition: opacity 500ms linear;
   }
 
-  .card-me:hover .card-content > *:not(.card-title),
-  .card-me:focus-within .card-content > *:not(.card-title) {
+  .cardMe:hover .cardContent > *:not(.cardTitle),
+  .cardMe:focus-within .cardContent > *:not(.cardTitle) {
     opacity: 1;
     transition-delay: 1000ms;
   }
-  .card-title::after {
+  .cardTitle::after {
     transform: scaleX(0);
   }
 }
