--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -40,10 +40,9 @@
   color: white;
   font-size: 18px;
 }
-.listItems {
-  list-style: none;
-}
+
 .listItem {
+  display: flex;
   margin-bottom: 0.5rem;
 }
 .listItem a {
