--- a/src/components/Banner/About.module.css
+++ b/src/components/Banner/About.module.css
@@ -5,6 +5,16 @@
   align-items: center;
 }
 
+#content{
+  width: 100%;
+  height: 100vh;
+}
+
+#aboutme{
+  width: 100%;
+  height: 100vh;
+}
+
 @media screen and (max-width: 768px) {
   .off {
     display: none;
