--- a/src/components/Service/styles.module.css
+++ b/src/components/Service/styles.module.css
@@ -34,7 +34,8 @@
   text-align: center;
 }
 .text {
-  font-size: 1rem;
+  font-size: 1.1rem;
+  color: #000000a9;
   text-align: center;
 }
 @media (max-width: 769px) {
