--- a/src/css/global.css
+++ b/src/css/global.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   font-family: "Quicksand", sans-serif;
   overflow-x: hidden;
+  text-decoration: none;
 }
 
 h1, h2, h3, h4, div, p, img, section, main{
@@ -13,7 +14,7 @@ h1, h2, h3, h4, div, p, img, section, main{
 }
 
 :root {
-  --main-orange: #ff7315;
+  --main-orange: #FF934E;
   --transparent-orange: rgba(255, 115, 21, 0.1);
   --input-gray: #f7f7f7;
   --white: #ffffff;
@@ -23,6 +24,24 @@ h1, h2, h3, h4, div, p, img, section, main{
   --sm: 14px;
   --md: 20px;
   --parragraph: 18px;
+}
+
+.button{
+  width: 150px;
+  height: 45px;
+  border: none;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 500;
+  color: white;
+  margin-right: 20px;
+  background-color: var(--main-orange);
+  border-radius: 15px;
+}
+
+.button:hover {
+  opacity: 0.9;
+  transition: 0.3s;
 }
 
 .title {
@@ -71,8 +90,8 @@ h1, h2, h3, h4, div, p, img, section, main{
 }
 
 .orgBtn:hover {
-  background-color: #e06513;
-  transition: 0.4s;
+  opacity: 0.9;
+  transition: 0.3s;
 }
 
 .whiteBtn {
@@ -87,7 +106,6 @@ h1, h2, h3, h4, div, p, img, section, main{
 }
 
 .whiteBtn:hover {
-  border: var(--main-orange) 3px solid;
   background-color: var(--transparent-orange);
   transition: 0.5s;
 }
