--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -43,20 +43,14 @@
 
 .listItem {
   display: flex;
-  margin-bottom: 0.5rem;
-}
-.listItem a {
-  text-decoration: none;
-  color: white;
-  font-weight: normal;
-  display: flex;
   align-items: center;
+  text-align: center;
 }
-.listItem a:hover {
-  color: white;
-}
+
 .listItem a svg {
-  margin-right: 0.4rem;
+  font-size: 1.5rem;
+  color: white;
+  margin-right: 0.5rem;
 }
 .listTitle {
   font-weight: 500;
