--- a/src/css/global.css
+++ b/src/css/global.css
@@ -9,7 +9,7 @@
   text-decoration: none;
 }
 
-h1, h2, h3, h4, div, p, img, section, main{
+h1, h2, h3, h4, div, p, img, section, main, span{
   overflow-y: hidden;
 }
 
