--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,38 +1,21 @@
 .home {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
   width: 100%;
   height: 100vh;
 }
 
-.greeting {
-  font-size: 1.5rem;
+.bannerContainer {
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
  
-/* pictures */
-.middlePic{
-  margin-top: -120px;
-  margin-bottom: -300px;
-  width: 80%;
-  object-fit: cover;
-}
-
-#bannerImg{
-  position: absolute;
-  width: 47%;
-  object-fit: cover;
-  z-index: 1;
-  overflow-x: hidden;
-}
-
-#circle{
-  position: absolute;
-  width: 50%;
-  margin-left: -2%; 
-  overflow-x: hidden;
-}
-
 .title {
   font-size: var(--lg);
+  font-weight: var(--poppins-bold);
   margin: 24px 0 24px 0;
 }
 
@@ -42,20 +25,43 @@
   font-weight: 400;
 }
 
+.subtitle{
+  color: var( --main-orange);
+}
+
 .wave {
+  font-size: 0.8em;
   animation: wave 2.1s 0.6s infinite;
   transform-origin: 75% 75%;
   display: inline-block;
   margin: 0 0.5rem;
 }
 
-.bannerDescription{
-  margin-top: 20%;
-}
 
 .floating { 
   animation: float 8s infinite linear;
 }
+
+
+#bannerImg{
+  margin-top: -22%;
+  position: absolute;
+  width: 52%;
+  object-fit: cover;
+  z-index: 1;
+  overflow-x: hidden;
+  right: 10px;
+}
+
+#circle{
+  margin-top: -24%;
+  position: absolute;
+  width: 48%; 
+  overflow-x: hidden;
+  right: 50px;
+}
+
+
 
 @keyframes float {
   from {
@@ -104,4 +110,26 @@
     flex: 1;
   }
 }
+
+
+@media (min-width: 1900px){
+  #bannerImg{
+    margin-top: -20%;
+    position: absolute;
+    width: 50%;
+    object-fit: cover;
+    z-index: 1;
+    overflow-x: hidden;
+    right: 9.5%;
+  }
+  
+  #circle{
+    margin-top: -20%;
+    position: absolute;
+    width: 40%; 
+    overflow-x: hidden;
+    right: 10%;
+  }
+}
+
 
