--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,45 +1,51 @@
-.marginNavbar {
-    margin-left: 50px;
+.navLink{
+  color: #737373 ;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 10px;
+  margin-left: -10px;
+  transition: color 0.3s ease;
 }
 
-.nav-link :hover{
-    color: black;
+.active {
+  color: rgba(0, 0, 0, 0.698);
+  font-weight: 500;
 }
 
 .marginTop {
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
-.marginIcons {
-    margin-left: 15px;
+.navIcons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
 }
 
 .icons {
-    width: 30px;
-    opacity: 0.7;
+  display: inline;
+  margin-left: 25px;
 }
 
 .icons:hover {
-    opacity: 1;
-    transition: 0.6s;
+  opacity: 2;
+  transition: 0.6s;
 }
 
 .navItem {
-    font-size: 18px;
-    margin-left: 10px;
-}
-
-
-@media (max-width: 768px) {
-    .marginNavbar {
-        margin-left: 0px;
-    }
-    
+  font-size: 18px;
+  margin-left: 10px;
 }
 
 @media (max-width: 768px) {
-    #navIcons {
-      display: none;
-    }
+  .marginNavbar {
+    margin-left: 0px;
+  }
 }
-    
+
+@media (max-width: 768px) {
+  #navIcons {
+    display: none;
+  }
+}
